changes aboutPage text & css.

--- a/wp-content/themes/dimsemenov-Touchfolio-c3d30d9/css/allTheSmallThingsMain.css
+++ b/wp-content/themes/dimsemenov-Touchfolio-c3d30d9/css/allTheSmallThingsMain.css
@@ -158,6 +158,10 @@ div#waitingForContactUs.scaleAnimation {
 } */
 }
 
+body.page-template-about main#about {
+  padding: 0 0 20px 0;
+}
+
 body.page-template-about p {
   text-align: left;
 }
