--- a/wp-content/themes/dimsemenov-Touchfolio-c3d30d9/sass/allTheSmallThingsMain.scss
+++ b/wp-content/themes/dimsemenov-Touchfolio-c3d30d9/sass/allTheSmallThingsMain.scss
@@ -86,6 +86,12 @@ About Us Page CSS.
 ==============================================================================*/
 body {
     &.page-template-about {
+        main {
+            &#about {
+                padding: 0 0 20px;
+            }
+        }
+
         p {
             text-align: left;
         }
