--- a/wp-content/themes/dimsemenov-Touchfolio-c3d30d9/css/allTheSmallThingsMain.css
+++ b/wp-content/themes/dimsemenov-Touchfolio-c3d30d9/css/allTheSmallThingsMain.css
@@ -19,17 +19,17 @@ body {
 }
 
 #pageTop {
-  display: inline-block;
-  width: 6.5em;
-  float: right;
-  cursor: pointer;
-  margin: 50px 0 0;
   position: relative;
+  display: inline-block;
+  float: right;
+  width: 6.5em;
+  margin: 50px 0 0;
+  cursor: pointer;
   text-align: right;
 }
 
 #pageTop:hover {
-  color: #cc0000;
+  color: #c00;
 }
 
 #pageTop #pageTopRocket {
@@ -37,23 +37,22 @@ body {
 }
 
 #pageTop span.fa-rocket {
-  font-size: 2em;
-  margin: 0 0.25% 0 0;
-  vertical-align: middle;
-  -webkit-transform: rotate(-45deg);
-  -ms-transform: rotate(-45deg);
-  transform: rotate(-45deg);
   position: absolute;
   top: 0;
   left: 0;
   display: block;
+  margin: 0 .25% 0 0;
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  vertical-align: middle;
+  font-size: 2em;
 }
 
 #pageTop img {
-  width: 2em;
   position: absolute;
   top: 28px;
   left: 0;
+  width: 2em;
   height: 0;
   opacity: 0;
 }
@@ -71,15 +70,15 @@ body {
     margin: 50px 0 -50px;
 }*/
 ::-moz-selection {
-  background: RGBa(204, 0, 0, 0.1);
+  background: RGBa(204, 0, 0, .1);
 }
 
 ::selection {
-  background: RGBa(204, 0, 0, 0.1);
+  background: RGBa(204, 0, 0, .1);
 }
 
 ::-moz-selection {
-  background: RGBa(204, 0, 0, 0.1);
+  background: RGBa(204, 0, 0, .1);
 }
 
 /*==============================================================================
@@ -188,8 +187,8 @@ body.page-template-about #primary {
 
 @media (max-width: 768px) {
   body.page-template-about div#waitingForContactUs {
-    left: 50%;
     bottom: 0;
+    left: 50%;
     margin-left: -145px;
   }
 }
@@ -206,26 +205,26 @@ Web Site Creation Portfolio Page CSS.
 
 ==============================================================================*/
 body.page-template-webPortfolio #loadingWrap {
+  position: fixed;
+  z-index: 10000000;
+  top: 0;
+  left: 0;
+  overflow: hidden;
   /*display:;*/
   width: 100%;
   height: 100%;
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 10000000;
-  overflow: hidden;
   background: #fff;
 }
 
 body.page-template-webPortfolio #loading {
   position: absolute;
   top: 0;
-  left: 0;
   right: 0;
   bottom: 0;
-  margin: auto;
+  left: 0;
   width: 150px;
   height: 100px;
+  margin: auto;
 }
 
 body.page-template-webPortfolio #loading p {
@@ -234,35 +233,33 @@ body.page-template-webPortfolio #loading p {
 }
 
 body.page-template-webPortfolio #loading p#signGo {
-  display: none;
   position: absolute;
   top: 0;
-  left: 0;
   right: 0;
   bottom: 0;
+  left: 0;
+  display: none;
   margin: auto;
 }
 
 body.page-template-webPortfolio #loading p span.fa {
-  font-size: 3em;
   margin-bottom: 5px;
+  font-size: 3em;
 }
 
 body.page-template-webPortfolio #loading p span.fa-car {
+  -webkit-transition: all 2.35s cubic-bezier(.19, 1, .22, 1) .45s;
+  transition: all 2.35s cubic-bezier(.19, 1, .22, 1) .45s;
   -webkit-transform: scale(1) translate(0, 0);
-  -ms-transform: scale(1) translate(0, 0);
   transform: scale(1) translate(0, 0);
-  -webkit-transition: all 2.35s cubic-bezier(0.19, 1, 0.22, 1) 0.45s;
-  transition: all 2.35s cubic-bezier(0.19, 1, 0.22, 1) 0.45s;
   color: #402012;
 }
 
 body.page-template-webPortfolio #loading p span.fa-car.scale {
+  -webkit-transition: all 2.35s cubic-bezier(.19, 1, .22, 1) .45s;
+  transition: all 2.35s cubic-bezier(.19, 1, .22, 1) .45s;
   -webkit-transform: scale(1.85) translate(0, -12%);
-  -ms-transform: scale(1.85) translate(0, -12%);
   transform: scale(1.85) translate(0, -12%);
-  -webkit-transition: all 2.35s cubic-bezier(0.19, 1, 0.22, 1) 0.45s;
-  transition: all 2.35s cubic-bezier(0.19, 1, 0.22, 1) 0.45s;
 }
 
 body.page-template-webPortfolio .left {
@@ -273,8 +270,8 @@ body.page-template-webPortfolio .left {
 body.page-template-webPortfolio .center {
   float: left;
   width: 30%;
-  margin-left: 5%;
   margin-right: 5%;
+  margin-left: 5%;
 }
 
 body.page-template-webPortfolio .right {
@@ -282,15 +279,13 @@ body.page-template-webPortfolio .right {
   width: 30%;
 }
 
-body.page-template-webPortfolio .center img,
-body.page-template-webPortfolio .left img,
-body.page-template-webPortfolio .right img {
+body.page-template-webPortfolio .center img , body.page-template-webPortfolio .left img , body.page-template-webPortfolio .right img {
   width: 100%;
   vertical-align: bottom;
 }
 
 body.page-template-webPortfolio h3 {
-  margin: 7px 0 0.25em;
+  margin: 7px 0 .25em;
 }
 
 body.page-template-webPortfolio h3 span {
@@ -303,12 +298,12 @@ body.page-template-webPortfolio p {
 }
 
 body.page-template-webPortfolio .myWork {
-  color: #fff;
-  background: #bdbdbd;
   display: inline-block;
   margin: 2px 0;
   padding: 0 7px;
+  color: #fff;
   border-radius: 5px;
+  background: #bdbdbd;
 }
 
 body.page-template-webPortfolio .clearFix {
@@ -323,36 +318,33 @@ body.page-template-webPortfolio .unpublishedNoImageWrap {
 
 body.page-template-webPortfolio .unpublished {
   position: absolute;
-  top: -100%;
   z-index: 10;
+  top: -100%;
 }
 
 body.page-template-webPortfolio .deskTop {
   position: absolute;
+  z-index: 11;
   top: 0;
   left: 0;
-  z-index: 11;
 }
 
-body.page-template-webPortfolio #gelatoIncIMGWrap,
-body.page-template-webPortfolio #primeMarcheIMGWrap {
+body.page-template-webPortfolio #gelatoIncIMGWrap , body.page-template-webPortfolio #primeMarcheIMGWrap {
   position: relative;
 }
 
-body.page-template-webPortfolio .gelatoIncIMG1,
-body.page-template-webPortfolio .primeMarcheIMG1 {
+body.page-template-webPortfolio .gelatoIncIMG1 , body.page-template-webPortfolio .primeMarcheIMG1 {
   position: absolute;
+  z-index: 3;
   top: 0;
   left: 0;
-  z-index: 3;
 }
 
-body.page-template-webPortfolio .gelatoIncIMG2,
-body.page-template-webPortfolio .primeMarcheIMG2 {
+body.page-template-webPortfolio .gelatoIncIMG2 , body.page-template-webPortfolio .primeMarcheIMG2 {
   position: absolute;
+  z-index: 2;
   top: 0;
   left: 0;
-  z-index: 2;
   opacity: 0;
 }
 
@@ -362,32 +354,32 @@ body.page-template-webPortfolio #fastHuntIMGWrap {
 
 body.page-template-webPortfolio .fastHuntIMG1 {
   position: absolute;
+  z-index: 5;
   top: 0;
   left: 0;
-  z-index: 5;
 }
 
 body.page-template-webPortfolio .fastHuntIMG2 {
   position: absolute;
+  z-index: 4;
   top: 0;
   left: 0;
-  z-index: 4;
   opacity: 0;
 }
 
 body.page-template-webPortfolio .fastHuntIMG3 {
   position: absolute;
+  z-index: 3;
   top: 0;
   left: 0;
-  z-index: 3;
   opacity: 0;
 }
 
 body.page-template-webPortfolio .fastHuntIMG4 {
   position: absolute;
+  z-index: 2;
   top: 0;
   left: 0;
-  z-index: 2;
   opacity: 0;
 }
 
@@ -436,14 +428,14 @@ Single Post Page CSS.
 
 ==============================================================================*/
 body.single-post #content {
-  text-align: center;
   margin: 20px 0 0;
+  text-align: center;
 }
 
 body.single-post .footer-copy p {
-  padding-left: 0;
-  padding-right: 0;
   margin: 0 auto;
+  padding-right: 0;
+  padding-left: 0;
   text-align: center;
   text-indent: 16em;
 }
@@ -459,13 +451,11 @@ body.single-post .footer-copy p {
 
 body.single-post:not(.collapsed-layout) .translateTop10 {
   -webkit-transform: translate(0, -10%);
-  -ms-transform: translate(0, -10%);
   transform: translate(0, -10%);
 }
 
 body.single-post:not(.collapsed-layout) .translateTop15 {
   -webkit-transform: translate(0, -15%);
-  -ms-transform: translate(0, -15%);
   transform: translate(0, -15%);
 }
 
@@ -479,7 +469,9 @@ body.collapsed-layout .main-header {
 }
 
 body.collapsed-layout .footer-copy p {
-  text-indent: 0;
-  text-align: center;
   margin: 0 auto;
+  text-align: center;
+  text-indent: 0;
 }
+
+/*# sourceMappingURL=../maps/allTheSmallThingsMain.css.map */
