Update Web Portfolio 2018/02/09.

--- a/wp-content/themes/dimsemenov-Touchfolio-c3d30d9/css/allTheSmallThingsMain.css
+++ b/wp-content/themes/dimsemenov-Touchfolio-c3d30d9/css/allTheSmallThingsMain.css
@@ -329,18 +329,18 @@ body.page-template-webPortfolio .deskTop {
   left: 0;
 }
 
-body.page-template-webPortfolio #gelatoIncIMGWrap , body.page-template-webPortfolio #primeMarcheIMGWrap {
+body.page-template-webPortfolio #microBloodScienceIMGWrap , body.page-template-webPortfolio #gelatoIncIMGWrap , body.page-template-webPortfolio #primeMarcheIMGWrap {
   position: relative;
 }
 
-body.page-template-webPortfolio .gelatoIncIMG1 , body.page-template-webPortfolio .primeMarcheIMG1 {
+body.page-template-webPortfolio .microBloodScienceIMG1 , body.page-template-webPortfolio .gelatoIncIMG1 , body.page-template-webPortfolio .primeMarcheIMG1 {
   position: absolute;
   z-index: 3;
   top: 0;
   left: 0;
 }
 
-body.page-template-webPortfolio .gelatoIncIMG2 , body.page-template-webPortfolio .primeMarcheIMG2 {
+body.page-template-webPortfolio .microBloodScienceIMG2 , body.page-template-webPortfolio .gelatoIncIMG2 , body.page-template-webPortfolio .primeMarcheIMG2 {
   position: absolute;
   z-index: 2;
   top: 0;
